<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/change_passowrd_old"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/change_password_old_password"
        android:inputType="textPassword"
        android:singleLine="true" />

    <EditText
        android:id="@+id/change_password_new"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/change_password_new_password"
        android:inputType="textPassword"
        android:singleLine="true" />

    <EditText
        android:id="@+id/change_password_new_confirm"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/change_password_confirm_password"
        android:inputType="textPassword"
        android:singleLine="true" />
    
    <TextView
        android:id="@+id/change_password_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:textSize="18sp" />
    
    
    <Button
        android:id="@+id/change_password_change"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/change_password_change_password" />
    
</LinearLayout>