<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:id="@+id/play_voice_btn_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/play_voice_button_next"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#2196f3"
            android:text="@string/play_voice_next"
            android:textColor="#ffffff" />
        <Button
            android:id="@+id/play_voice_button_stop"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#72d254"
            android:text="@string/play_voice_stop"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/play_voice_info_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp" >
        
        <ImageView
            android:id = "@+id/play_voice_user_portrait"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/logo"
            android:clickable="true" />

        <TextView
            android:id="@+id/play_voice_text_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="#2196f3"
            android:text="@string/play_voice_name_temp"
            android:textSize="20sp" 
            android:clickable="true"/>

        <TextView
            android:id="@+id/play_voice_text_doing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/play_voice_doing_temp"
            android:textSize="30sp" />
        
        <ImageView 
            android:id="@+id/play_voice_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:src="@drawable/play_voice"/>

        
    </LinearLayout>

</RelativeLayout>