<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <Button
        android:id="@+id/login_button_submit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="#2196f3"
        android:textColor="#ffffff"
        android:text="@string/login_submit" />
    
    <LinearLayout
        android:layout_above="@id/login_button_submit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="50dp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/login_edit_username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_username"
            android:textColor="#000000"
            android:singleLine="true" />

        <EditText
            android:id="@+id/login_edit_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:singleLine="true" />

        <TextView
            android:id="@+id/login_text_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:visibility="invisible" />
    </LinearLayout>



</RelativeLayout>