<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/current_doing_group_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="#ed4c2a"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:paddingTop="15dp" >

            <Button
                android:id="@+id/current_doing_group_record"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/record" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_doing_record"
                android:textSize="18sp"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:paddingTop="15dp" >

            <Button
                android:id="@+id/current_doing_group_finish"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/finish" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/current_doing_stop"
                android:textColor="#ffffff" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/current_doing_group_bottom"
        android:background="#ffffff"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/current_doing_image_portrait"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textSize="24sp"
                android:text="@string/current_doing_iam" />

            <TextView
                android:id="@+id/current_doing_text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="#ed4c2a"
                android:text="bath"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/current_doing_text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="35sp"
            android:text="00:12:03" />

        <Button
            android:id="@+id/current_doing_button_listen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:textColor="#ffffff"
            android:background="#2196f3"
            android:text="@string/current_doing_listen" />
    </LinearLayout>

</RelativeLayout>